@@ -1,0 +1,10 @@
+\header {
+  texidoc = "words in mixed font in a single string
+ are separated by spaces as in the input string.
+ Here a Russian word followed by a roman word."
+  
+}
+
+\version "2.9.20"
+
+\markup  { "Здравствуйт Hallo" }
