@@ -42,9 +42,12 @@ public:
   string description_string () const; 
   SCM font_file_name () const;
   void register_font_file (string, string);
-  Stencil text_stencil (string) const;
-  Stencil pango_item_string_stencil (PangoItem const *, string) const;
+  Stencil text_stencil (string, bool tight) const;
 
+  Stencil pango_item_string_stencil (PangoItem const *, string, bool tight) const;
+
+  virtual Stencil word_stencil (string) const;
+  virtual Stencil text_stencil (string) const;
   virtual void derived_mark () const;
 };
 
